dist/1.0/bin/sample/retrieveUnpackaged/objects/Provisioning_Plan_Task_Selection__c.object
<CustomObject>
    <description>Object storing relation between Provisioning Plan Task and Provisionin Plan that can be triggered (or was triggered) from task.</description>
    <fields>
        <fullName>Provisioning_Plan_Name__c</fullName>
        <formula>HYPERLINK( &apos;/&apos;+ Provisioning_Plan__c , Provisioning_Plan__r.Name+&apos; - &apos;+Provisioning_Plan__r.Plan_Name__c )</formula>
        <label>Provisioning Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisioning_Plan_Task__c</fullName>
        <label>Provisioning Plan Task</label>
        <referenceTo>Provisioning_Plan_Task__c</referenceTo>
        <relationshipLabel>Plans for selection</relationshipLabel>
        <relationshipName>Plans_for_selection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provisioning_Plan__c</fullName>
        <label>Provisioning Plan</label>
        <referenceTo>Provisioning_Plan__c</referenceTo>
        <relationshipLabel>Plans for selection</relationshipLabel>
        <relationshipName>Plans_for_selection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <label>Provisioning Plan Task Selection</label>
    <nameField>
        <displayFormat>PTS{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plans for selection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Automatic_tasks</fullName>
        <active>true</active>
        <description>Automatic tasks should not have possibillity to start conditional plans.</description>
        <errorConditionFormula>OR(
ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c,&apos;Update of Billing Products&apos;),
ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c,&apos;Billing Account Creation&apos;),
ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c,&apos;IP Unregistration&apos;),
ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c,&apos;IP Activation&apos;),
ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c,&apos;Phone Number Release&apos;),
ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c,&apos;Phone Number Activation&apos;),
ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c,&apos;Automatic Provisioning (ST)&apos;),
ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c,&apos;Automatic Provisioning&apos;),
ISPICKVAL(Provisioning_Plan_Task__r.Task_Type__c,&apos;Update of CSR Database&apos;)
)</errorConditionFormula>
        <errorMessage>Plans for selection can not be set for automatic task.</errorMessage>
    </validationRules>
</CustomObject>